make fluid layout and fixed overlapping footer  close #129

--- a/src/app/components/courses-for-groups/added-courses/added-courses.component.scss
+++ b/src/app/components/courses-for-groups/added-courses/added-courses.component.scss
@@ -1,9 +1,5 @@
-.div-table {
-  height: 100%;
-}
-
 .btn {
-  padding: 0rem 0.75rem;
+  padding: 0 0.75rem;
   height: 1.5rem;
   font-size: 12px;
 }
@@ -18,7 +14,7 @@
 }
 
 .card-body {
-  padding: 0px;
+  padding: 0;
 }
 
 table tr td{
