--- a/src/app/components/courses-for-groups/courses-for-groups.component.scss
+++ b/src/app/components/courses-for-groups/courses-for-groups.component.scss
@@ -1,5 +1,3 @@
-@import "../../../styles.scss";
-
 .selection{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -17,29 +15,29 @@
 
 .col-name{
   font-size: 15px;
-  padding-right: 0pt;
+  padding-right: 0;
 }
 
 .col-name-semester{
   font-size: 15px;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .col-1 {
-  padding-right: 0pt;
+  padding-right: 0;
 }
 
 .mr-2[_ngcontent-c2], .mx-2[_ngcontent-c2]{
-  margin-right: 0rem !important;
+  margin-right: 0 !important;
 }
 
 .btn-info[_ngcontent-c2] {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .btn-success[_ngcontent-c2] {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .copy[_ngcontent-c2] {
@@ -79,7 +77,7 @@ select.form-control[_ngcontent-c2]:not([size]):not([multiple]) {
 }
 
 .form-control[_ngcontent-c2] {
-  padding: 0rem 0.75rem;
+  padding: 0 0.75rem;
 }
 
 .count-label{
@@ -91,6 +89,19 @@ select.form-control[_ngcontent-c2]:not([size]):not([multiple]) {
 }
 
 .course-for-group-table{
-  height: calc(100% - 50px);
-  display: block;
+  height: 50%;
+  overflow: auto;
+}
+
+.courses{
+  height: 40%;
+}
+
+.studied-courses{
+  height: 100%;
+  overflow: auto;
+}
+
+.courses-for-groups{
+  height: calc(100% - 108px);
 }
