--- a/src/app/components/courses-for-groups/studied-courses/studied-courses.component.scss
+++ b/src/app/components/courses-for-groups/studied-courses/studied-courses.component.scss
@@ -1,10 +1,3 @@
-@import "../../../../styles.scss";
-
-.div-table{
-  height: 230px;
-  overflow: auto;
-}
-
 table tr td{
   padding: 5px;
 }
@@ -14,7 +7,7 @@ table thead td{
 }
 
 .card-body{
-  padding: 0px;
+  padding: 0;
 }
 
 td{
